Fixes .button.flat on mobile

--- a/styles/get-involved.css
+++ b/styles/get-involved.css
@@ -93,6 +93,17 @@ section:nth-child(5) .button.flat.suggested-action {
 	border-color: #d33682;
 }
 
+@media (max-width: 1080px) {
+	.button.flat {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.actions {
+		margin-bottom: 50px;
+	}
+}
+
 /* HERO */
 .row.hero h1,
 .row.hero h2,
